2018-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (ReadPICTImage): Properly initialize "black
	canvas" that tiles may be composed on.  Fixes oss-fuzz 7574
	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
	EnhanceImage". (Credit to OSS-Fuzz).

	* coders/rle.c (ReadRLEImage): Check for EOF when reading comment.
	Fixes oss-fuzz 7667 "graphicsmagick/coder_RLE_fuzzer:
	Use-of-uninitialized-value in ReadRLEImage". (Credit to OSS-Fuzz).

	* coders/pdb.c (WritePDBImage): Avoid use of uninitialized
	bytes. Fixes oss-fuzz 7638 "graphicsmagick/coder_PDB_fuzzer:
	Use-of-uninitialized-value in WritePDBImage". (Credit to
	OSS-Fuzz).

	* coders/rla.c (ReadRLAImage): Add many more validations,
	including scanline offsets and number of channels.  Fixes oss-fuzz
	7653 "graphicsmagick/coder_RLA_fuzzer: Timeout in
	graphicsmagick_coder_RLA_fuzzer". (Credit to OSS-Fuzz).

	* coders/txt.c (ReadTXTImage): Implement missing subrange logic to
	read only the specified range of frames.  Limits frames read from
	oss-fuzz test case
	clusterfuzz-testcase-minimized-coder_TEXT_fuzzer-6061076048248832
	"graphicsmagick/coder_TEXT_fuzzer: Timeout in
	graphicsmagick_coder_TEXT_fuzzer". (Credit to OSS-Fuzz).

	* Magick++/lib/Image.cpp (read): Set subrange = 1 since this
	interface is intended to read just one frame from the input file.
	Use the STL-based interfaces to read multiple frames.

	* coders/fits.c (ReadFITSImage): Verify FITS header before reading
	further.  Rejects file from oss-fuzz 7650
	"graphicsmagick/coder_FITS_fuzzer: Out-of-memory in
	graphicsmagick_coder_FITS_fuzzer".  (Credit to OSS-Fuzz).

	* PerlMagick/Magick.xs (Get): Fix PerlMagick compilation problem
	due to rename/repurposing of image->clip_mask.

2018-04-13  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/image.c, magick/image.h:  In order to be able to
	support SVG masks, and to be able to further extend the
	Image data structure without changing its size, new data