@@ -38,6 +38,11 @@
 <p>2018-04-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xcf.c (ReadXCFImage): Restore SetImage() which was
+previously commented out.  This is needed to assure initialized
+pixels.  Fixes oss-fuzz 7430 &quot;graphicsmagick/coder_XCF_fuzzer:
+Use-of-uninitialized-value in AlphaCompositePixel&quot;. (Credit to
+OSS-Fuzz).</li>
 <li>coders/pict.c (ReadPICTImage): Properly initialize &quot;black
 canvas&quot; that tiles may be composed on.  Fixes oss-fuzz 7574
 &quot;graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
