@@ -1,5 +1,11 @@
 2018-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/xcf.c (ReadXCFImage): Restore SetImage() which was
+	previously commented out.  This is needed to assure initialized
+	pixels.  Fixes oss-fuzz 7430 "graphicsmagick/coder_XCF_fuzzer:
+	Use-of-uninitialized-value in AlphaCompositePixel". (Credit to
+	OSS-Fuzz).
+
 	* coders/pict.c (ReadPICTImage): Properly initialize "black
 	canvas" that tiles may be composed on.  Fixes oss-fuzz 7574
 	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
